Downgrading java version to 8